<resources>
    <string name="app_name">Maltroom</string>
    <string name="template_note">Example note</string>

    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>

    <string name="hint_add">Add</string>
    <string name="hint_spin_name">Select name</string>
    <string name="hint_spin_nose">Select nose</string>
    <string name="hint_spin_finish">Select finish</string>
    <string name="hint_spin_palate">Select palate</string>
    <string name="hint_extra">Extra notes&#8230;</string>
    <string name="hint_ID">ID</string>
    <string name="hint_selectedNose">"Spinner selected : "</string>
    <string name="title_activity_nav_bar">Maltroom v0.4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_add">Add a note</string>
    <string name="drawer_list">See my notes</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="drawer_share">Share</string>
    <string name="send">Send</string>
    <string name="tools">Tools</string>
    <string name="app_title">Maltroom v0.4</string>


</resources>
